navbar collapse fixedd

--- a/src/scss/alg.scss
+++ b/src/scss/alg.scss
@@ -1,54 +1,56 @@
-@import 'extends';
-@import 'variables';
+@import "extends";
+@import "variables";
 
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.algField{
-    //
+.algField {
+  //
 }
 
-.algRow{
-  margin-bottom: 5px;  
+.algRow {
+  margin-bottom: 5px;
 }
-.cardWrapper{
-    padding:0;
-    margin: 0;
-    cursor: pointer;
+.cardWrapper {
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
 }
-$cardMargin:2px;
-.algCard{
-    position: relative;
-    margin-left: $cardMargin;
+$cardMargin: 2px;
+.algCard {
+  overflow: hidden;
+  position: relative;
+  margin-left: $cardMargin;
 
-    height: calc((100vw - 40px - (#{$cardMargin}*4)) / #{$cardInRow});    //40px это паддинг поля. 6px это марджин между элементами
-    //
-    border: 1px solid black;
-    border-left: 0;
-    border-right: 0;
-    //
-    transition: 0.5s all;
+  height: calc(
+    (100vw - 40px - (#{$cardMargin}* 4)) / #{$cardInRow}
+  ); //40px это паддинг поля. 6px это марджин между элементами
+  //
+  border: 1px solid black;
+  border-left: 0;
+  border-right: 0;
+  //
+  transition: 0.5s all;
 
-    &:hover{
-        transform: rotateY(15deg);
-        box-shadow: 5px 0 3px 0 gray;
-        border-left: 1px solid black;        
-    }
+  &:hover {
+    transform: rotateY(15deg);
+    box-shadow: 5px 0 3px 0 gray;
+    border-left: 1px solid black;
+  }
 
-    span{
-        
-        @include componentCenter(absolute,80%);
+  span {
+    @include componentCenter(absolute, 80%);
 
-        user-select:  none;
-    }
+    user-select: none;
+  }
 }
-.dark .algCard{
-    border: 1px solid white;
-    border-left: 0;
-    border-right: 0;
-    &:hover{
-        border-left: 1px solid white;  
-    }
+.dark .algCard {
+  border: 1px solid white;
+  border-left: 0;
+  border-right: 0;
+  &:hover {
+    border-left: 1px solid white;
+  }
 }
