--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,42 +1,41 @@
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css");
-@import 'variables';
-
+@import "variables";
 
 body {
-    font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 0;
-    padding: 0;
-    font-family: 'Rowdies', cursive;
-    //padding-top: $navtopH; 
+  font: 14px "Century Gothic", Futura, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Rowdies", cursive;
+  //padding-top: $navtopH;
 }
 
 //Карточки с подписью снизу
-figure{
+figure {
   display: inline-block;
 }
-figcaption{
+figcaption {
   text-align: center;
   transform: translateY(-5px);
   overflow: hidden;
-  span{
+  span {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);    
+    transform: translate(-50%, -50%);
   }
 }
-svg{
+svg {
   position: relative;
   height: 40px;
   width: 200px;
-  
-  polygon{
-    stroke:black;
+
+  polygon {
+    stroke: black;
   }
 }
 
 //Это уже сами карточки
-.card{
+.card {
   display: inline-block;
   border: 2px solid black;
   box-shadow: 2px 2px 10px -5px;
@@ -49,55 +48,54 @@ svg{
   margin-bottom: 0px;
 }
 //
+$navHegiht: 96px;
+//
 //Поле, на котором карточки располагаются
-#field{
+#field {
   position: absolute;
   width: 100%;
-  height: calc(100vh - #{$navtopH});
+  height: calc(100vh - #{$navHegiht});
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
   overflow-y: scroll;
-  
-  transition: .5s all;
+
+  transition: 0.5s all;
   //Темная тема
-  &.dark{
+  &.dark {
     //border: 5px solid $LED;
     box-shadow: inset 0 0 10px 5px $LED;
 
     background-color: $fieldDarkColor;
-    & span{
+    & span {
       color: white;
     }
-    & .card{
-      border: 2px solid white;      
+    & .card {
+      border: 2px solid white;
     }
-    & polygon{
+    & polygon {
       stroke: white;
     }
   }
 }
 //
 //Обрезка краев фото
-.cutlogo{
-  overflow:hidden; 
-  img{
+.cutlogo {
+  overflow: hidden;
+  img {
     margin: -65px 0;
   }
 }
 
 //Верхний навбар
-.navtop{
-  height: $navtopH;
-}
 
 //Свитчер в верхнем наве
-div.custom-switch{
-  label{
+div.custom-switch {
+  label {
     padding-top: 1%;
     line-height: 20px;
     color: white;
-    
+
     font-size: 1.2em;
     user-select: none;
   }
